Implemented receiving new entities from endpoints process + regenerate api functions
