# src/app/api/models/chat-dto.ts
@@ -4,6 +4,7 @@
 import { MessageDto } from '../models/message-dto';
 import { UserDto } from '../models/user-dto';
 export interface ChatDto {
+  createdAt?: string;
   id?: string;
   isGroup?: boolean;
   messages?: Array<MessageDto> | null;
